CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(MENG)
ENABLE_LANGUAGE(CXX ASM)
SET(MENG_SRC_LIST ./src/meng.cpp ./src/linux64/swapcontext.s)
INCLUDE_DIRECTORIES(./include)
INCLUDE_DIRECTORIES(./src)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${MENG_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${MENG_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${MENG_SRC_LIST})
IF(REMOD)
SET(CMAKE_CXX_FLAGS "-O3 -Wall -Werror -gdwarf-2 -m64 -DNDEBUG")
MESSAGE("build release lib")
ELSE()
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64 -D_DEBUG")
MESSAGE("build debug lib")
ENDIF()
SET(LIBRARY_OUTPUT_PATH ${MENG_BINARY_DIR}/bin)
SET(ASM_OPTIONS "-x assembler-with-cpp")
SET(CMAKE_ASM_FLAGS "${CMAKE_CXX_FLAGS} ${ASM_OPTIONS}" )
ADD_LIBRARY(meng STATIC ${MENG_SRC_LIST})
